autoscaling.tf
# provider "aws" {
#   region = "ap-south-1"
# }

# resource "aws_vpc" "main" {
#   cidr_block = "10.0.0.0/16"
#   tags = {
#     Name = "main-vpc"
#   }
# }

# resource "aws_subnet" "subnet_a" {
#   vpc_id            = aws_vpc.main.id
#   cidr_block        = "10.0.1.0/24"
#   availability_zone = "ap-south-1a"
# }

# resource "aws_subnet" "subnet_b" {
#   vpc_id            = aws_vpc.main.id
#   cidr_block        = "10.0.2.0/24"
#   availability_zone = "ap-south-1b"
# }

# resource "aws_internet_gateway" "igw" {
#   vpc_id = aws_vpc.main.id
#   tags = {
#     Name = "internet-gateway"
#   }
# }

# resource "aws_route_table" "public_rt" {
#   vpc_id = aws_vpc.main.id

#   route {
#     cidr_block = "0.0.0.0/0"
#     gateway_id = aws_internet_gateway.igw.id
#   }
# }

# resource "aws_route_table_association" "subnet_a_association" {
#   subnet_id      = aws_subnet.subnet_a.id
#   route_table_id = aws_route_table.public_rt.id
# }

# resource "aws_route_table_association" "subnet_b_association" {
#   subnet_id      = aws_subnet.subnet_b.id
#   route_table_id = aws_route_table.public_rt.id
# }

# resource "aws_security_group" "alb_sg" {
#   vpc_id = aws_vpc.main.id

#   ingress {
#     from_port   = 80
#     to_port     = 80
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }
# }

# resource "aws_lb" "app_lb" {
#   name               = "app-load-balancer"
#   internal           = false
#   load_balancer_type = "application"
#   security_groups    = [aws_security_group.alb_sg.id]
#   subnets            = [aws_subnet.subnet_a.id, aws_subnet.subnet_b.id]
# }

# resource "aws_lb_target_group" "app_tg" {
#   name     = "app-target-group"
#   port     = 80
#   protocol = "HTTP"
#   vpc_id   = aws_vpc.main.id
# }

# resource "aws_lb_listener" "http" {
#   load_balancer_arn = aws_lb.app_lb.arn
#   port              = 80
#   protocol          = "HTTP"

#   default_action {
#     type             = "forward"
#     target_group_arn = aws_lb_target_group.app_tg.arn
#   }
# }

# resource "aws_launch_template" "web_lt" {
#   name_prefix   = "web-server-"
#   image_id      = "ami-00bb6a80f01f03502"
#   instance_type = "t2.micro"
#   vpc_security_group_ids = [aws_security_group.alb_sg.id]

#   user_data = base64encode(<<-EOF
#                 #!/bin/bash
#                 yum update -y
#                 yum install -y httpd
#                 systemctl start httpd
#                 systemctl enable httpd
#                 echo "<h1>Welcome to My Web Server</h1>" > /var/www/html/index.html
#                 EOF
#   )
# }

# resource "aws_autoscaling_group" "web_asg" {
#   desired_capacity    = 2
#   max_size            = 3
#   min_size            = 1
#   vpc_zone_identifier = [aws_subnet.subnet_a.id, aws_subnet.subnet_b.id]
#   target_group_arns   = [aws_lb_target_group.app_tg.arn]

#   launch_template {
#     id      = aws_launch_template.web_lt.id
#     version = "$Latest"
#   }
# }

# output "alb_dns_name" {
#   value = aws_lb.app_lb.dns_name
# }
